Layout bug fixes

--- a/src/components/Layout/ChangeArrow/ChangeArrow.css
+++ b/src/components/Layout/ChangeArrow/ChangeArrow.css
@@ -378,6 +378,19 @@
     }
 }
 
+@media (width: 1368px) and (height:912px)
+{
+    .nextArrowClicked {
+        top: 850px;
+    }
+    
+    .toWorkArrow {
+
+        top: 850px;
+
+    } 
+
+}
 
 
 
